<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".My_Profile">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
    android:id="@+id/img_chat"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:src="@drawable/ic_chat"
    android:layout_alignParentRight="true"
    android:layout_margin="10dp"
    />

    <ImageView
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:src="@drawable/ic_notification"
    android:layout_margin="10dp"
    android:layout_toLeftOf="@+id/img_chat"
    />

    <ImageView
    android:id="@+id/cirImg_logo_myprofile"
    android:layout_width="200dp"
    android:layout_height="130dp"
    android:src="@drawable/logobulet"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="20dp"
    />

    <RelativeLayout
    android:id="@+id/Relative_layout_myprofile"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_below="@id/cirImg_logo_myprofile"
    android:background="@drawable/bg_profile3"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    >

    <ImageView
    android:id="@+id/cirImg_photo_myprofile"
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_margin="15dp"
    android:src="@drawable/ic_account_circle_white"
    />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ubah"
    android:textColor="@color/putih1"
    android:textStyle="bold"
    android:textSize="12sp"
    android:layout_below="@id/cirImg_photo_myprofile"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="-10dp"
    />

    <TextView
    android:id="@+id/txt_email_refund"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/profile_name"
    android:textColor="@color/putih1"
    android:textStyle="bold"
    android:layout_toRightOf="@id/cirImg_photo_myprofile"
    android:layout_centerInParent="true"
    />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/profile_email"
    android:textColor="@color/putih1"
    android:layout_below="@id/txt_email_refund"
    android:layout_marginLeft="120dp"
    />

    </RelativeLayout>



    <TextView
    android:id="@+id/txt_myprofile_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/username"
    android:textStyle="bold"
    android:textColor="@color/hitam"
    android:layout_below="@id/Relative_layout_myprofile"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="30dp"
    />

    <TextView
    android:id="@+id/txt_myprofile_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/aturpassword"
    android:textStyle="bold"
    android:textColor="@color/hitam"
    android:layout_below="@id/txt_myprofile_username"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    />

    <TextView
    android:id="@+id/txt_myprofile_tanggal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tanggal"
    android:textStyle="bold"
    android:textColor="@color/hitam"
    android:layout_below="@id/txt_myprofile_password"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    />

    <TextView
    android:id="@+id/txt_myprofile_telepon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/telepon"
    android:textStyle="bold"
    android:textColor="@color/hitam"
    android:layout_below="@id/txt_myprofile_tanggal"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    />

    <TextView
    android:id="@+id/txt_myprofile_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email_myprofile"
    android:textStyle="bold"
    android:textColor="@color/hitam"
    android:layout_below="@id/txt_myprofile_telepon"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    />



    </RelativeLayout>
    </RelativeLayout>


</ScrollView>